--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <ul>
                         <li><a href="link/othercactusindex.html">Accueil</a></li>
                         <li><a href="link/othercactusindex.html#myriostigma">Astrophytum myriostigma</a></li>
+                        <li><a href="link/othercactusindex.html#cornifera">Coryphanta cornifera</a></li>
                         <li><a href="link/othercactusindex.html#grusonii">Echinocactus grusonii</a></li>
                         <li><a href="link/othercactusindex.html#multicostatus">Echinofossulocactus multicostatus</a></li>
                         <li><a href="link/othercactusindex.html#subdenudata">Echinopsis subdenudata</a></li>
@@ -109,6 +110,7 @@
                         <li><a href="link/crassulaindex.html#ovata">Crassula ovata</a></li>
                         <li><a href="link/crassulaindex.html#gollum">Crassula ovata gollum</a></li>
                         <li><a href="link/crassulaindex.html#sunset">Crassula ovata sunset</a></li>
+                        <li><a href="link/crassulaindex.html#pyramidalis">Crassula pyramidalis</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Dracaena</a>
@@ -123,6 +125,7 @@
                     <ul>
                         <li><a href="link/euphorbiasindex.html">Accueil</a></li>
                         <li><a href="link/euphorbiasindex.html#aeruginosa">Euphorbia aeruginosa</a></li>
+                        <li><a href="link/euphorbiasindex.html#decaryi">Euphorbia decaryi</a></li>
                         <li><a href="link/euphorbiasindex.html#enopla">Euphorbia enopla</a></li>
                         <li><a href="link/euphorbiasindex.html#erythrea">Euphorbia erythrea</a></li>
                         <li><a href="link/euphorbiasindex.html#horrida">Euphorbia horrida</a></li>
@@ -160,6 +163,7 @@
                     <ul>
                         <li><a href="link/kalanchoeindex.html">Accueil</a></li>
                         <li><a href="link/kalanchoeindex.html#beharensis">Kalanchoe beharensis</a></li>
+                        <li><a href="link/kalanchoeindex.html#thyrsiflora">Kalanchoe thyrsiflora</a></li>
                     </ul>
                 </li>
                 
@@ -167,6 +171,7 @@
                     <ul>
                         <li><a href="link/mammillariaindex.html">Accueil</a></li>
                         <li><a href="link/mammillariaindex.html#elongata">Mammillaria elongata anguinea</a></li>
+                        <li><a href="link/mammillariaindex.html#toluca">Mammillaria toluca</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Monstera</a>
@@ -225,6 +230,7 @@
                         <li><a href="link/othersucculentsindex.html#cooperi">Adromischus cooperi</a></li>
                         <li><a href="link/othersucculentsindex.html#americanavariegata">Agave americana variegata</a></li>
                         <li><a href="link/othersucculentsindex.html#rufescensvariegata">Anacampseros rufescens variegata</a></li>
+                        <li><a href="link/othersucculentsindex.html#lehmannii">Corpuscularia lehmannii</a></li>
                         <li><a href="link/othersucculentsindex.html#echinatum">Delosperma echinatum</a></li>
                         <li><a href="link/othersucculentsindex.html#pulchra">Frithia pulchra</a></li>
                         <li><a href="link/othersucculentsindex.html#lithops">Lithops</a></li>
