--- a/link/crassulagallery.html
+++ b/link/crassulagallery.html
@@ -20,8 +20,9 @@
             </div> 
                 <h2 class="sub-title-gallery-category">Végétaux présents ici: 
                     <a href="#ovata">Crassula ovata,</a>  
-                    <a href="#gollum">ovata gollum,</a> 
-                    <a href="#sunset">ovata sunset.</a>
+                    <a href="#gollum">Crassula ovata gollum,</a> 
+                    <a href="#sunset">Crassula ovata sunset,</a>
+                    <a href="#pyramidalis">Crassula pyramidalis.</a>
                 </h2>       
     </header>
             <hr>
@@ -50,7 +51,17 @@
 	<section>                                                                   <!-- CRASSULA OVATA SUNSET -->
 			<img class="flex" src="../assets/img/crassula/gallery/crassulaovatasunset.jpg" alt="Crassula ovata sunset" title="Crassula ovata sunset"/>
 			<img class="flex" src="../assets/img/crassula/gallery/crassulaovatasunset2.jpg" alt="Crassula ovata sunset" title="Crassula ovata sunset"/>
-	</section>	
+	</section>
+            <hr>
+            <div class="species-title-gallery-category" id="pyramidalis">Crassula pyramidalis
+                <a href="crassulaindex.html#pyramidalis">Voir la fiche info</a>
+            </div>
+            <hr>	
+    <section>                                                                   <!-- CRASSULA PYRAMIDALIS -->
+            <img class="flex" src="../assets/img/crassula/gallery/crassulapyramidalis(1).jpg" alt="Crassula pyramidalis" title="Crassula pyramidalis"/>
+            <img class="flex" src="../assets/img/crassula/gallery/crassulapyramidalis(2).jpg" alt="Crassula pyramidalis" title="Crassula pyramidalis"/>
+    </section>	
+            <hr>
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
