--- a/link/crassulaindex.html
+++ b/link/crassulaindex.html
@@ -19,8 +19,9 @@
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
                     <a href="#ovata">Crassula ovata,</a>  
-                    <a href="#gollum">ovata gollum,</a> 
-                    <a href="#sunset">ovata sunset.</a>
+                    <a href="#gollum">Crassula ovata gollum,</a> 
+                    <a href="#sunset">Crassula ovata sunset,</a>
+                    <a href="#pyramidalis">Crassula pyramidalis.</a>
                 </h2>
         </header>
         <hr><hr>
@@ -44,7 +45,8 @@
         </div>
         <div class="index-category-tab-content" id="ovata5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
         </div>
-        <div class="index-category-tab-content" id="ovata6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'en garde un dans un bac carré en terre-cuite pas très grand pour le moment avec un gollum. Et un autre dans un pot en terre-cuite de bonne taille.
+        <div class="index-category-tab-content" id="ovata6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br>
+            Je fais un surfaçage de graviers de Jura car le rendu me plaît beaucoup. <br/>Je les garde un dans un bac carré en terre-cuite de bonne taille. 
         </div>
     </section>
         <hr>
@@ -68,7 +70,7 @@
         </div>
         <div class="index-category-tab-content" id="gollum5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
         </div>
-        <div class="index-category-tab-content" id="gollum6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un bac carré pas très grand avec un ovata.
+        <div class="index-category-tab-content" id="gollum6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br>Je fais un surfaçage de graviers de Jura car le rendu me plaît beaucoup. <br/>Je les garde un dans un bac carré en terre-cuite de bonne taille.
         </div>
     </section>
         <hr>
@@ -92,11 +94,35 @@
         </div>
         <div class="index-category-tab-content" id="sunset5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
         </div>
-        <div class="index-category-tab-content" id="sunset6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de taille moyenne.
+        <div class="index-category-tab-content" id="sunset6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br>Je fais un surfaçage de graviers de Jura car le rendu me plaît beaucoup. <br/>Je le garde dans un pot en terre-cuite de taille moyenne.
         </div>
         </section>
         <hr>
-
+    <section class="index-category-system-tabs">                                <!-- CRASSULA PYRAMIDALIS -->
+        <nav-tabs class="index-category-nav-tabs" id="pyramidalis">
+            <a href="#pyramidalis1" aria-selected="true">Nom</a>
+            <a href="#pyramidalis2">Exposition en été</a>
+            <a href="#pyramidalis3">Exposition en hiver</a>
+            <a href="#pyramidalis4">Arrosage en été</a>
+            <a href="#pyramidalis5">Arrosage en hiver</a>
+            <a href="#pyramidalis6">Rempotage</a>
+        </nav-tabs>    
+        <div class="index-category-tab-content" id="pyramidalis1"><span class="species">Crassula pyramidalis<a href="crassulagallery.html#pyramidalis">Voir la galerie photo</a></span>
+                <img src="../assets/img/crassula/index/crassulapyramidalis(1).jpg" alt="Crassula pyramidalis" title="Crassula pyramidalis"/>
+        </div>   
+        <div class="index-category-tab-content" id="pyramidalis2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct seulement le matin ou le soir. <br/>Seulement après avoir été acclimaté au soleil.
+        </div>
+        <div class="index-category-tab-content" id="pyramidalis3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée ne descendant pas sous les 10°C contre une fenêtre recevant du soleil. 
+        </div>
+        <div class="index-category-tab-content" id="pyramidalis4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+        </div>
+        <div class="index-category-tab-content" id="pyramidalis5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
+        </div>
+        <div class="index-category-tab-content" id="pyramidalis6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de sable de rivière. <br>Je fais un surfaçage de graviers de Jura car le rendu me plaît beaucoup. <br/>Je le garde dans un pot en en plastique carré pour pouvoir en mettre plusieurs les uns contre les autres facilement.
+            <a class="species-repotting-info" href="repottingcrassulapyramidalis.html" alt="Rempotage Crassula pyramidalis" title="Rempotage Crassula pyramidalis">Voir comment je rempote mes Crassula pyramidalis</a>
+        </div>
+    </section>
+        <hr>
         <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
             <button class="styled-btn-gallery"><a href="crassulagallery.html">Galerie photos de mes Crassula</a></button>
             <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
@@ -105,3 +131,4 @@
 
     </body>
 </html>
+
