--- a/link/euphorbiasgallery.html
+++ b/link/euphorbiasgallery.html
@@ -18,7 +18,8 @@
 				<h1 class="title-gallery-category" id="top"> Galerie photo de mes Euphorbes</h1>
 			</div>
 			<h2 class="sub-title-gallery-category">Végétaux présents ici: 
-				<a href="#aeruginosa">aeruginosa,</a>  
+				<a href="#aeruginosa">aeruginosa,</a>
+				<a href="#aeruginosa">decaryi,</a>
 				<a href="#enopla">enopla,</a> 
 				<a href="#erythrea">erythrea,</a> 
 				<a href="#horrida">horrida,</a>
@@ -39,6 +40,15 @@
 			<img class="flex" src="../assets/img/euphorbias/gallery/aeruginosa2.jpg" alt="Euphorbia aeruginosa" title="Euphorbia aeruginosa"/>
 			<img class="flex" src="../assets/img/euphorbias/gallery/aeruginosa3.jpg" alt="Euphorbia aeruginosa" title="Euphorbia aeruginosa"/>
 			<img class="flex" src="../assets/img/euphorbias/gallery/aeruginosa4.jpg" alt="Euphorbia aeruginosa" title="Euphorbia aeruginosa"/>
+	</section>
+	<hr>
+			<div class="species-title-gallery-category" id="decaryi">Euphorbia decaryi
+				<a href="euphorbiasindex.html#decaryi">Voir la fiche info</a>
+			</div>
+			<hr>
+    <section>																	<!-- EUPHORBIA DECARYI -->
+			<img class="flex" src="../assets/img/euphorbias/gallery/euphorbiadecaryi(1).jpg" alt="Euphorbia decaryi" title="Euphorbia decaryi"/>
+			<img class="flex" src="../assets/img/euphorbias/gallery/euphorbiadecaryi(2).jpg" alt="Euphorbia decaryi" title="Euphorbia decaryi"/>
 	</section>
 	    	<hr>
 			<div class="species-title-gallery-category" id="enopla">Euphorbia enopla
