--- a/link/kalanchoegallery.html
+++ b/link/kalanchoegallery.html
@@ -18,7 +18,8 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Kalanchoe</h1>
             </div>
                 <h2 class="sub-title-gallery-category">Végétaux présents ici: 
-                    <a href="#beharensis">Kalanchoe beharensis.</a>
+                    <a href="#beharensis">Kalanchoe beharensis,</a>
+                    <a href="#thyrsiflora">Kalanchoe thyrsiflora.</a>
                 </h2>                
     </header>
             <hr>
@@ -30,6 +31,15 @@
 			<img class="flex" src="../assets/img/kalanchoe/gallery/beharensis1.jpg" alt="Kalanchoe beharensis" title="Kalanchoe beharensis"/>
 			<img class="flex" src="../assets/img/kalanchoe/gallery/beharensis2.jpg" alt="Kalanchoe beharensis" title="Kalanchoe beharensis"/>
             <img class="flex" src="../assets/img/kalanchoe/gallery/beharensis3.jpg" alt="Kalanchoe beharensis" title="Kalanchoe beharensis"/>
+	</section>
+            <hr>
+            <div class="species-title-gallery-category" id="thyrsiflora">Kalanchoe beharensis
+                <a href="kalanchoeindex.html#beharensis">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- KALANCHOE THYRSIFLORA -->
+			<img class="flex" src="../assets/img/kalanchoe/gallery/thyrsiflora(1).jpg" alt="Kalanchoe thyrsiflora" title="Kalanchoe thyrsiflora"/>
+			<img class="flex" src="../assets/img/kalanchoe/gallery/thyrsiflora(2).jpg" alt="Kalanchoe thyrsiflora" title="Kalanchoe thyrsiflora"/>
 	</section>
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
