--- a/link/kalanchoeindex.html
+++ b/link/kalanchoeindex.html
@@ -18,34 +18,60 @@
                 <h1 class="title-index-category" id="top">MES KALANCHOE</h1>
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
-                    <a href="#beharensis">Kalanchoe beharensis.</a>
+                    <a href="#beharensis">Kalanchoe beharensis,</a>
+                    <a href="#thyrsiflora">Kalanchoe thyrsiflora.</a>
                 </h2>
         </header>
-                <hr><hr>
-        <section class="index-category-system-tabs">                            <!-- KALANCHOE BEHARENSIS -->
-            <nav-tabs class="index-category-nav-tabs" id="beharensis">
-                <a href="#beharensis1" aria-selected="true">Nom</a>
-                <a href="#beharensis2">Exposition en été</a>
-                <a href="#beharensis3">Exposition en hiver</a>
-                <a href="#beharensis4">Arrosage en été</a>
-                <a href="#beharensis5">Arrosage en hiver</a>
-                <a href="#beharensis6">Rempotage</a>
-            </nav-tabs>   
-            <div class="index-category-tab-content" id="beharensis1"><span class="species">Kalanchoe beharensis<a href="kalanchoegallery.html#beharensis">Voir la galerie photo</a></span>
-                    <img src="../assets/img/kalanchoe/index/kalanchoe.jpg" alt="Kalanchoe beharensis" title="Kalanchoe beharensis"/>
-            </div>   
-            <div class="index-category-tab-content" id="beharensis2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
-            </div>
-            <div class="index-category-tab-content" id="beharensis3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
-            </div>
-            <div class="index-category-tab-content" id="beharensis4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
-            </div>
-            <div class="index-category-tab-content" id="beharensis5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
-            </div>
-            <div class="index-category-tab-content" id="beharensis6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama pour son rendu qui me plaît. <br/>Je le garde dans un pot en terre-cuite de taille moyenne.
-            </div>
-        </section>
-        <hr>
+            <hr><hr>
+                <section class="index-category-system-tabs">                            <!-- KALANCHOE BEHARENSIS -->
+                    <nav-tabs class="index-category-nav-tabs" id="beharensis">
+                        <a href="#beharensis1" aria-selected="true">Nom</a>
+                        <a href="#beharensis2">Exposition en été</a>
+                        <a href="#beharensis3">Exposition en hiver</a>
+                        <a href="#beharensis4">Arrosage en été</a>
+                        <a href="#beharensis5">Arrosage en hiver</a>
+                        <a href="#beharensis6">Rempotage</a>
+                    </nav-tabs>   
+                    <div class="index-category-tab-content" id="beharensis1"><span class="species">Kalanchoe beharensis<a href="kalanchoegallery.html#beharensis">Voir la galerie photo</a></span>
+                            <img src="../assets/img/kalanchoe/index/beharensis.jpg" alt="Kalanchoe beharensis" title="Kalanchoe beharensis"/>
+                    </div>   
+                    <div class="index-category-tab-content" id="beharensis2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
+                    </div>
+                    <div class="index-category-tab-content" id="beharensis3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
+                    </div>
+                    <div class="index-category-tab-content" id="beharensis4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+                    </div>
+                    <div class="index-category-tab-content" id="beharensis5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
+                    </div>
+                    <div class="index-category-tab-content" id="beharensis6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama pour son rendu qui me plaît. <br/>Je le garde dans un pot en terre-cuite de taille moyenne.
+                    </div>
+                </section>
+            <hr>
+                <section class="index-category-system-tabs">                            <!-- KALANCHOE TRHYRSIFLORA -->
+                    <nav-tabs class="index-category-nav-tabs" id="thyrsiflora">
+                        <a href="#thyrsiflora1" aria-selected="true">Nom</a>
+                        <a href="#thyrsiflora2">Exposition en été</a>
+                        <a href="#thyrsiflora3">Exposition en hiver</a>
+                        <a href="#thyrsiflora4">Arrosage en été</a>
+                        <a href="#thyrsiflora5">Arrosage en hiver</a>
+                        <a href="#thyrsiflora6">Rempotage</a>
+                    </nav-tabs>   
+                    <div class="index-category-tab-content" id="thyrsiflora1"><span class="species">Kalanchoe thyrsiflora<a href="kalanchoegallery.html#thyrsiflora">Voir la galerie photo</a></span>
+                            <img src="../assets/img/kalanchoe/index/thyrsiflora.jpg" alt="Kalanchoe thyrsiflora" title="Kalanchoe thyrsiflora"/>
+                    </div>   
+                    <div class="index-category-tab-content" id="thyrsiflora2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct une grosse partie de la journée. <br/>Seulement après avoir été acclimaté au soleil.
+                    </div>
+                    <div class="index-category-tab-content" id="thyrsiflora3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
+                    </div>
+                    <div class="index-category-tab-content" id="thyrsiflora4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+                    </div>
+                    <div class="index-category-tab-content" id="thyrsiflora5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
+                    </div>
+                    <div class="index-category-tab-content" id="thyrsiflora6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de sable de rivière. <br/>Je garnis le haut de graviers de Jura pour le rendu qui me plaît. <br/>Je les garde dans un pot en terre-cuite de taille moyenne.
+                        <a class="species-repotting-info" href="repottingkalanchoethyrsiflora.html" alt="Rempotage Kalanchoe thyrsiflora" title="Rempotage Kalanchoe thyrsiflora">Voir comment je rempote mes Kalanchoe thyrsiflora</a>
+                    </div>
+                </section>
+            <hr>
         <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
             <button class="styled-btn-gallery"><a href="kalanchoegallery.html">Galerie photos de mes Kalanchoe</a></button>
             <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
