--- a/link/mammillariagallery.html
+++ b/link/mammillariagallery.html
@@ -18,7 +18,8 @@
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Mammillaria</h1>
             </div>
                 <h2 class="sub-title-gallery-category">Végétaux présents ici:
-                    <a href="#elongata"> elongata anguinea.</a> 
+                    <a href="#anguinea"> elongata anguinea,</a>
+                    <a href="#anguinea"> toluca.</a> 
                 </h2>        
     </header>
             <hr>
@@ -31,6 +32,15 @@
         <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(2).jpg" alt="elongata anguinea" title="elongata anguinea"/>
         <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(3).jpg" alt="elongata anguinea" title="elongata anguinea"/>
         <img class="flex" src="../assets/img/mammillaria/gallery/mammillariaelongata(4).jpg" alt="elongata anguinea" title="elongata anguinea"/>
+    </section>
+    <hr>
+            <div class="species-title-gallery-category" id="toluca">toluca
+                <a href="mammillariaindex.html#toluca">Voir la fiche info</a>
+            </div>
+            <hr>
+    <section>                                                                   <!-- ELONGATA ANGUINEA-->
+        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariatoluca(1).jpg" alt="elongata anguinea" title="elongata anguinea"/>
+        <img class="flex" src="../assets/img/mammillaria/gallery/mammillariatoluca(2).jpg" alt="elongata anguinea" title="elongata anguinea"/>
     </section>
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
