--- a/link/mammillariaindex.html
+++ b/link/mammillariaindex.html
@@ -18,7 +18,8 @@
                 <h1 class="title-index-category" class= "top">MES MAMMILLARIA</h1>
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici: 
-                    <a href="#anguinea"> elongata anguinea.</a>
+                    <a href="#anguinea"> elongata anguinea,</a>
+                    <a href="#anguinea"> toluca.</a>
                 </h2>
         </header>
                 <hr><hr>
@@ -43,6 +44,31 @@
             <div class="index-category-tab-content" id="anguinea5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois. <br/> Sauf si je vois qu'il commence à se fripper (ce qui n'est pas toujours évident à voir).
             </div>
             <div class="index-category-tab-content" id="anguinea6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut d'Akadama surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en plastique pas trop grand car je n'avais plus que ça lorsque je l'ai rempoté mais lors du prochain rempotage, il ira dans un pot en terre-cuite.
+            </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- TOLUCA -->
+            <nav-tabs class="index-category-nav-tabs" id="toluca">
+                <a href="#toluca1" aria-selected="true">Nom</a>
+                <a href="#toluca2">Exposition en été</a>
+                <a href="#toluca3">Exposition en hiver</a>
+                <a href="#toluca4">Arrosage en été</a>
+                <a href="#toluca5">Arrosage en hiver</a>
+                <a href="#toluca6">Rempotage</a>
+            </nav-tabs>    
+            <div class="index-category-tab-content" id="toluca1"><span class="species">toluca<a href="mammillariagallery.html#toluca">Voir la galerie photo</a></span>
+                    <img class="flex2" src="../assets/img/mammillaria/index/mammillariatoluca.jpg" alt="toluca" title="toluca"/>
+            </div>   
+            <div class="index-category-tab-content" id="toluca2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai ou début Juin jusque courant Octobre en plein soleil direct toute la journée. <br/>Je ne le laisse pas dehors si les nuits sont trop froides comme par exemple sous les 10°C. <br/>Doit avoir été acclimaté avant de rester en plein soleil.
+            </div>
+            <div class="index-category-tab-content" id="toluca3" hidden="hidden">Je le laisse en intérieur dans un endroit très lumineux recevant le soleil direct contre une fenêtre ou la température ne descendra jamais sous les 10°C.
+            </div>
+            <div class="index-category-tab-content" id="toluca4" hidden="hidden">Je ne l'arrose que peu durent de longues périodes chaudes sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+            </div>
+            <div class="index-category-tab-content" id="toluca5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois. <br/> Sauf si je vois qu'il commence à se fripper (ce qui n'est pas toujours évident à voir).
+            </div>
+            <div class="index-category-tab-content" id="toluca6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de sable de rivière. <br/>Je garnis le haut de graviers de Jura surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en plastique carré afin de pouvoir en installer plusieurs les uns contre les autres facilement.
+                <a class="species-repotting-info" href="repottingmammillariatoluca.html" alt="Rempotage toluca" title="Rempotage toluca">Voir comment je rempote les toluca</a>
             </div>
         </section>
         <hr>
