--- a/link/repottingaeschynanthusmarmoratus.html
+++ b/link/repottingaeschynanthusmarmoratus.html
@@ -13,7 +13,7 @@
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Aeschynanthus marmoratus</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Aeschynanthus marmoratus en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Aeschynanthus marmoratus en créant un substrat adapté à partir de plusieurs éléments.</h2></p></div>
         </section>  
                 <section class="nav-button">
                     <button class="styled-btn-index"><a href="othersuspendedindex.html#marmoratus">Fiche info de mes Aeschynanthus marmoratus</a></button>
@@ -48,13 +48,13 @@
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le mélange des 3 précédents éléments fait.
+                Ici, le mélange des précédents éléments fait.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
+    <section class="species-repotting-step">                                    <!-- AVANT REMPOTAGE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/aeschynanthusmarmoratus(1).jpg" alt="avant rempottage" title="avant rempottage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/aeschynanthusmarmoratus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -62,9 +62,9 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- MAINTIEN POUR DÉPOTTAGE -->
+    <section class="species-repotting-step">                                    <!-- MAINTIEN POUR DÉPOTAGE -->
         <div class="species-repotting-img">
-            <img class="responsive-resize" src="../assets/img/repotting/species/aeschynanthusmarmoratus(2).jpg" alt="maintien pour dépottage" title="maintien pour dépottage"/>
+            <img class="responsive-resize" src="../assets/img/repotting/species/aeschynanthusmarmoratus(2).jpg" alt="maintien pour dépotage" title="maintien pour dépotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -112,13 +112,13 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
+    <section class="species-repotting-step">                                    <!-- REMPOTAGE FINI -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/species/aeschynanthusmarmoratus(7).jpg" alt="rempottage fini" title="rempottage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le rempottage est fini et le pot est suspendu à sa place, les plantes n'ont plus qu'à vivre tranquillement.
+                Ici, le rempotage est fini et le pot est suspendu à sa place, les plantes n'ont plus qu'à vivre tranquillement.
             </p>
         </div>
     </section>
