--- a/link/repottingcoryphantacornifera.html
+++ b/link/repottingcoryphantacornifera.html
@@ -13,7 +13,7 @@
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Coryphanta cornifera</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Coryphanta cornifera en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Coryphanta cornifera en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
         </section>  
                 <section class="nav-button">
                     <button class="styled-btn-index"><a href="othercactusindex.html#cornifera">Fiche info de mes Coryphanta cornifera</a></button>
@@ -58,7 +58,7 @@
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le mélange des 3 précédents éléments fait.
+                Ici, le mélange des précédents éléments fait.
             </p>
         </div>
     </section>
@@ -142,7 +142,7 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
+    <section class="species-repotting-step">                                    <!-- REMPOTAGE FINI -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/species/Coryphantacornifera(8).jpg" alt="rempottage fini" title="rempottage fini"/>
         </div>
