--- a/link/repottinglithops.html
+++ b/link/repottinglithops.html
@@ -13,7 +13,7 @@
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Lithops</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Lithops en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Lithops en créant un substrat très drainant à partir de plusieurs éléments.</h2></p></div>
         </section>  
                 <section class="nav-button">
                     <button class="styled-btn-index"><a href="othersucculentsindex.html#lithops">Fiche info de mes Lithops</a></button>
@@ -152,13 +152,13 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
+    <section class="species-repotting-step">                                    <!-- REMPOTAGE FINI -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/species/lithops(9).jpg" alt="rempottage fini" title="rempottage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le rempottage est fini et ils partent dans un prochain bac avant de vivre dehors.
+                Ici, le rempotage est fini et ils partent dans un prochain bac avant de vivre dehors.
             </p>
         </div>
     </section>
