--- a/link/repottingnotocactusmagnificus.html
+++ b/link/repottingnotocactusmagnificus.html
@@ -12,7 +12,7 @@
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Notocactus magnificus</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Notocactus magnificus en créant un substrat très drainant à partir de plusieurs élément.</h2></p></div>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Notocactus magnificus en créant un substrat très drainant à partir de plusieurs élément.</h2></p></div>
         </section>  
                 <section class="nav-button">
                     <button class="styled-btn-index"><a href="notocactusindex.html#magnificus">Fiche info de mon Notocactus magnificus</a></button>
@@ -57,7 +57,7 @@
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le mélange des 3 précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
+                Ici, le mélange des précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
             </p>
         </div>
     </section>
@@ -141,13 +141,13 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
+    <section class="species-repotting-step">                                    <!-- REMPOTAGE FINI -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/species/notocactusmagnificus(8).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le rempottage est coplètement fini sans avoir abîmé les épines des cactus et sans en avoir eues dans les doigts.
+                Ici, le rempotage est complètement fini sans avoir abîmé les épines des cactus et sans en avoir eues dans les doigts.
             </p>
         </div>
     </section>
