--- a/link/repottingopuntiamonacanthamonstruosisvariegata.html
+++ b/link/repottingopuntiamonacanthamonstruosisvariegata.html
@@ -58,7 +58,7 @@
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le mélange des 3 précédents éléments fait.
+                Ici, le mélange des précédents éléments fait.
             </p>
         </div>
     </section>
@@ -122,13 +122,13 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
+    <section class="species-repotting-step">                                    <!-- REMPOTAGE FINI -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/species/opuntiamonacanthamonstruosisvariegata(6).jpg" alt="rempottage fini" title="rempottage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le rempottage est fini et j'ai également rajouté ses petites boutures de morceaux aniennement cassés.
+                Ici, le rempotage est fini et j'ai également rajouté ses petites boutures de morceaux aniennement cassés.
             </p>
         </div>
     </section>
