--- a/modal.html
+++ b/modal.html
@@ -17,15 +17,40 @@
                     <hr>
                         <div class="modal-update-left">
                             <ul>
+                                <li>                                            <!-- 09/07/2021 -->
+                                    <div class="modal-date-flex">
+                                            09/07/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/kalanchoeindex.html#thyrsiflora" alt="Kalanchoe thyrsiflora" title="Kalanchoe thyrsiflora"><strong>Kalanchoe thyrsiflora</strong></a> (Mes Kalanchoe).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingkalanchoethyrsiflora.html" alt="Rempotage Kalanchoe thyrsiflora" title="Rempotage Kalanchoe thyrsiflora"><strong>Kalanchoe thyrsiflora.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/crassulaindex.html#pyramidalis" alt="Crassula pyramidalis" title="Crassula pyramidalis"><strong>Crassula pyramidalis</strong></a> (Mes Crassula).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingcrassulapyramidalis.html" alt="Rempotage Crassula pyramidalis" title="Rempotage Crassula pyramidalis"><strong>Crassula pyramidalis.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/othersucculentsindex.html#lehmannii" alt="Corpuscularia lehmannii" title="Corpuscularia lehmannii"><strong>Corpuscularia lehmannii</strong></a> (Mes autres succulentes).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingcorpuscularialehmannii.html" alt="Rempotage Corpuscularia lehmannii" title="Corpuscularia lehmannii"><strong>Corpuscularia lehmannii.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/mammillariaindex.html#toluca" alt="Mammillaria toluca" title="Mammillaria toluca"><strong>Mammillaria toluca</strong></a> (Mes Mammillaria).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingmammillariatoluca.html" alt="Rempotage Mammillaria toluca" title="Rempotage Mammillaria toluca"><strong>Mammillaria toluca.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout 
+                                            <a href="link/euphorbiasindex.html#decaryi" alt="Euphorbia decaryi" title="Euphorbia decaryi"><strong>Euphorbia decaryi</strong></a> (Mes Euphorbes).<br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingeuphorbiadecaryi.html" alt="Rempotage Euphorbia decaryi" title="Euphorbia decaryi"><strong>Euphorbia decaryi.</strong></a>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>                                            <!-- 06/07/2021 -->
                                     <div class="modal-date-flex">
                                             06/07/2021:
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mon <a class="species-repotting-info" href="link/repottingaeschynanthusmarmoratus.html" alt="Rempotage Aeschynanthus marmoratus" title="Rempotage Aeschynanthus marmoratus"><strong>Aeschynanthus marmoratus</strong></a>.
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingaeschynanthusmarmoratus.html" alt="Rempotage Aeschynanthus marmoratus" title="Rempotage Aeschynanthus marmoratus"><strong>Aeschynanthus marmoratus.</strong></a><br>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingeuphorbiainconstantia.html" alt="Rempotage Euphorbia inconstantia" title="Rempotage Euphorbia inconstantia"><strong>Euphorbia inconstantia.</strong></a>
                                         </div>
-                                </div>
+                                    </div>
                                 </li>
                                 <li>                                            <!-- 03/07/2021 -->
                                     <div class="modal-date-flex">
@@ -36,9 +61,9 @@
                                             &nbsp;&nbsp;_Corrections erreurs de liens entre les différentes pages sur mes Lithops.<br>
                                             &nbsp;&nbsp;_Ajout 
                                             <a href="link/othercactusindex.html#cornifera" alt="Coryphanta cornifera" title="Coryphanta cornifera"><strong>Coryphanta cornifera</strong></a> (Mes Cactus).<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottingcoryphantacornifera.html" alt="Rempotage Coryphanta cornifera" title="Rempotage Coryphanta cornifera"><strong>Coryphanta cornifera</strong></a>.
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingcoryphantacornifera.html" alt="Rempotage Coryphanta cornifera" title="Rempotage Coryphanta cornifera"><strong>Coryphanta cornifera.</strong></a>
                                         </div>
-                                </div>
+                                    </div>
                                 </li>
                                 <li>                                            <!-- 26/06/2021 -->
                                     <div class="modal-date-flex">
@@ -47,9 +72,9 @@
                                     <div class="modal-desc-flex">
                                         <div>
                                             &nbsp;&nbsp;_Ajout <a href="link/othersucculentsindex.html#lithops" alt="lithops" title="lithops"><strong>Lithops</strong></a> (Mes Autres succulentes).<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops"><strong>Lithops</strong></a>.
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops"><strong>Lithops.</strong></a>
                                         </div>
-                                </div>
+                                    </div>
                                 </li> 
                                 <li>                                            <!-- 23/06/2021 -->
                                     <div class="modal-date-flex">
@@ -57,12 +82,12 @@
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mon <a class="species-repotting-info" href="link/repottingferocactusstainesii.html" alt="Rempotage Ferocactus stainesii" title="Rempotage Ferocactus stainesii"><strong>Ferocactus stainesii</strong></a>.<br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottingnotocactusmagnificus.html" alt="Rempotage Notocactus magnificus" title="Rempotage Notocactus magnificus"><strong>Notocactus magnificus.</strong></a><br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mon <a class="species-repotting-info" href="link/repottingoreocereuscelsianus.html" alt="Rempotage Oreocereus celsianus" title="Rempotage Oreocereus celsianus"><strong>Oreocereus celsianus.</strong></a><br/>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote mes <a class="species-repotting-info" href="link/repottingstetsoniacoryne.html" alt="Rempotage Stetsonia coryne" title="Rempotage Stetsonia coryne"><strong>Stetsonia coryne.</strong></a>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingferocactusstainesii.html" alt="Rempotage Ferocactus stainesii" title="Rempotage Ferocactus stainesii"><strong>Ferocactus stainesii.</strong></a><br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingnotocactusmagnificus.html" alt="Rempotage Notocactus magnificus" title="Rempotage Notocactus magnificus"><strong>Notocactus magnificus.</strong></a><br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingoreocereuscelsianus.html" alt="Rempotage Oreocereus celsianus" title="Rempotage Oreocereus celsianus"><strong>Oreocereus celsianus.</strong></a><br/>
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment je rempote les <a class="species-repotting-info" href="link/repottingstetsoniacoryne.html" alt="Rempotage Stetsonia coryne" title="Rempotage Stetsonia coryne"><strong>Stetsonia coryne.</strong></a>
                                         </div>
-                                </div>
+                                    </div>
                                 </li> 
                                 <li>                                            <!-- 21/06/2021 -->
                                     <div class="modal-date-flex">
@@ -70,9 +95,9 @@
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'accroche mes <a class="species-repotting-info" href="link/installtillandsia.html" alt="Accrochage Tillandsia" title="Accrochage Tillandsia"><strong>Tillandsia</strong></a>..
+                                            &nbsp;&nbsp;_Ajout d'une page expliquant comment j'accroche les <a class="species-repotting-info" href="link/installtillandsia.html" alt="Accrochage Tillandsia" title="Accrochage Tillandsia"><strong>Tillandsia.</strong></a>
                                         </div>
-                                </div>
+                                    </div>
                                 </li> 
                                 <li>                                            <!-- 18/06/2021 -->
                                     <div class="modal-date-flex">
@@ -82,7 +107,7 @@
                                         <div>
                                             &nbsp;&nbsp;_Ajout de liens entre les fiches infos et galeries photos par espèce de plante pour faciliter la navigation.
                                         </div>
-                                </div>
+                                    </div>
                                 </li>
                                 <li>                                            <!-- 09/06/2021 -->
                                     <div class="modal-date-flex">
@@ -98,7 +123,7 @@
                                 <li>                                            <!-- 05/06/2021 -->
                                     <div class="modal-date-flex">
                                             05/06/2021:
-                                        </div>
+                                    </div>
                                         <div class="modal-desc-flex">
                                                 <div>
                                                     &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#multicostatus"><strong>Echinofossulocactus multicostatus</strong></a> (Mes Cactus).<br/>
@@ -112,7 +137,7 @@
                                 <li>                                            <!-- 04/06/2021 -->
                                     <div class="modal-date-flex">
                                                 04/06/2021:
-                                            </div>
+                                    </div>
                                         <div class="modal-desc-flex">
                                                 <div>
                                                     &nbsp;&nbsp;_Ajout <a href="link/aloeindex.html#humilis"><strong>Aloe humilis</strong></a> (Mes Aloe).<br/>
@@ -180,7 +205,7 @@
                             <ul>
                                 <li>_Ajout de plantes.</li>
                                 <li>_Ajout de photos.</li>
-                                <li>_Création pages <strong>arrosages, bouturages, parasites et rempotages.</strong></li>
+                                <li>_Création pages <strong>rempotages.</strong></li>
                             </ul>               
                         </div>
         </div>
