--- a/link/euphorbiasindex.html
+++ b/link/euphorbiasindex.html
@@ -18,7 +18,8 @@
             <h1 class="title-index-category" id="top">MES EUPHORBES</h1>
           </div>
             <h2 class="sub-title-index-category">Végétaux présents ici: 
-              <a href="#aeruginosa">aeruginosa,</a>  
+              <a href="#aeruginosa">aeruginosa,</a>
+              <a href="#aeruginosa">decaryi,</a>
               <a href="#enopla">enopla,</a> 
               <a href="#erythrea">erythrea,</a> 
               <a href="#horrida">horrida,</a>
@@ -46,11 +47,36 @@
           </div>
           <div class="index-category-tab-content" id="aeruginosa3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="aeruginosa4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="aeruginosa4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="aeruginosa5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/>Je donne un peu d'eau seulement si je vois qu'il commence à se creuser.
           </div>
           <div class="index-category-tab-content" id="aeruginosa6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'ai garni le haut avec de l'Akadama car j'aime bien le rendu. <br/>Je le garde dans une petite jardinière en dur avec quelques autres.
+          </div>
+        </section>
+        <hr>
+        <section class="index-category-system-tabs">                            <!-- EUPHORBIA DECARYI -->
+          <nav-tabs class="index-category-nav-tabs" id="decaryi">
+            <a href="#decaryi1" aria-selected="true">Nom</a>
+            <a href="#decaryi2">Exposition en été</a>
+            <a href="#decaryi3">Exposition en hiver</a>
+            <a href="#decaryi4">Arrosage en été</a>
+            <a href="#decaryi5">Arrosage en hiver</a>
+            <a href="#decaryi6">Rempotage</a>
+          </nav-tabs>   
+          <div class="index-category-tab-content" id="decaryi1"><span class="species">Euphorbia decaryi<a href="euphorbiasgallery.html#decaryi">Voir la galerie photo</a></span>
+                <img src="../assets/img/euphorbias/index/euphorbiadecaryi.jpg" alt="Euphorbia decaryi" title="Euphorbia decaryi"/>
+          </div>   
+          <div class="index-category-tab-content" id="decaryi2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec parfois très peu de soleil du matin ou du soir.
+          </div>
+          <div class="index-category-tab-content" id="decaryi3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
+          </div>
+          <div class="index-category-tab-content" id="decaryi4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
+          </div>
+          <div class="index-category-tab-content" id="decaryi5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/>Je donne un peu d'eau seulement si je vois qu'il commence à se creuser.
+          </div>
+          <div class="index-category-tab-content" id="decaryi6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de sable de rivière. <br/>J'ai garni le haut avec des graviers de Jura car j'aime bien le rendu. <br/>Je les garde dans un pot en plastique carré pour les installer facilement les uns contre les autres.
+            <a class="species-repotting-info" href="repottingeuphorbiadecaryi.html" alt="Rempotage Euphorbia decaryi" title="Rempotage Euphorbia decaryi">Voir comment je rempote les Euphorbia decaryi</a>
           </div>
         </section>
         <hr>
@@ -70,7 +96,7 @@
           </div>
           <div class="index-category-tab-content" id="enopla3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="enopla4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="enopla4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="enopla5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps.
           </div>
@@ -94,7 +120,7 @@
           </div>
           <div class="index-category-tab-content" id="erythrea3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="erythrea4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="erythrea4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="erythrea5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/>Je donne un peu d'eau seulement si je vois qu'il commence à se creuser.
           </div>
@@ -118,7 +144,7 @@
           </div>
           <div class="index-category-tab-content" id="horrida3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="horrida4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="horrida4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="horrida5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. 
           </div>
@@ -142,11 +168,12 @@
           </div>
           <div class="index-category-tab-content" id="inconstantia3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="inconstantia4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="inconstantia4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="inconstantia5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps.
           </div>
           <div class="index-category-tab-content" id="inconstantia6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'ai garni le haut avec de graviers de Jura car j'aime bien le rendu. <br/>Je le garde dans un pot en terre-cuite de petite taille.
+            <a class="species-repotting-info" href="repottingeuphorbiainconstantia.html" alt="Rempotage Euphorbia inconstantia" title="Rempotage Euphorbia inconstantia">Voir comment je rempote les Euphorbia inconstantia</a>
           </div>
         </section>
         <hr>
@@ -166,7 +193,7 @@
           </div>
           <div class="index-category-tab-content" id="mammillarisvariegata3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="mammillarisvariegata4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="mammillarisvariegata4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="mammillarisvariegata5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. 
           </div>
@@ -190,7 +217,7 @@
           </div>
           <div class="index-category-tab-content" id="pseudoglobosa3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="pseudoglobosa4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="pseudoglobosa4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="pseudoglobosa5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. 
           </div>
@@ -214,11 +241,11 @@
           </div>
           <div class="index-category-tab-content" id="trigona3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="trigona4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="trigona4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="trigona5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/>Je donne un peu d'eau seulement si je vois qu'il commence à se creuser.
           </div>
-          <div class="index-category-tab-content" id="trigona6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'ai garni le haut avec de l'Akadama car j'aime bien le rendu. <br/>Je le garde dans un pot en plastique car je n'en avais plus en terre-cuite lors du rempotage mais la prochaine fois il en aura un.
+          <div class="index-category-tab-content" id="trigona6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'ai garni le haut avec des graviers de Jura car j'aime bien le rendu. <br/>Je le garde dans un pot en plastique car je n'en avais plus en terre-cuite lors du rempotage mais la prochaine fois il en aura un.
           </div>
         </section>
         <hr>
@@ -238,11 +265,11 @@
           </div>
           <div class="index-category-tab-content" id="trigonarubra3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
           </div>
-          <div class="index-category-tab-content" id="trigonarubra4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+          <div class="index-category-tab-content" id="trigonarubra4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. 
           </div>
           <div class="index-category-tab-content" id="trigonarubra5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/>Je donne un peu d'eau seulement si je vois qu'il commence à se creuser.
           </div>
-          <div class="index-category-tab-content" id="trigonarubra6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'ai garni le haut avec de l'Akadama car j'aime bien le rendu. <br/>Je le garde dans un pot en plastique car je n'en avais plus en terre-cuite lors du rempotage mais la prochaine fois il en aura un.
+          <div class="index-category-tab-content" id="trigonarubra6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>J'ai garni le haut avec des graviers de Jura car j'aime bien le rendu. <br/>Je le garde dans un pot en plastique car je n'en avais plus en terre-cuite lors du rempotage mais la prochaine fois il en aura un.
           </div>
         </section>
         <hr>
