--- a/link/othersucculentsgallery.html
+++ b/link/othersucculentsgallery.html
@@ -19,12 +19,13 @@
         </div>
             <h2 class="sub-title-gallery-category">Végétaux présents ici: 
                 <a href="#cooperi">Adromischus cooperi,</a>
-                <a href="#americanavariegata">Agave americana variegata,</a>
-                <a href="#rufescensvariegata">Anacampseros rufescens variegata,</a>
-                <a href="#echinatum">Delosperma echinatum,</a>
-                <a href="#pulchra">Frithia pulchra,</a>
-                <a href="#lithops">Lithops,</a>
-                <a href="#titanopsis">Titanopsis.</a>
+                    <a href="#americanavariegata">Agave americana variegata,</a>
+                    <a href="#rufescensvariegata">Anacampseros rufescens variegata,</a>
+                    <a href="#lehmannii">Corpuscularia lehmannii,</a>
+                    <a href="#echinatum">Delosperma echinatum,</a>
+                    <a href="#pulchra">Frithia pulchra,</a>
+                    <a href="#lithops">lithops,</a>
+                    <a href="#titanopsis">Titanopsis.</a>
             </h2>        
         </header>        
                 <hr>
@@ -33,10 +34,10 @@
                 </div>
                 <hr>
         <section>                                                                   <!-- ADROMISCHUS COOPERI -->
-            <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(1).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(2).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(3).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(4).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(1).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(2).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(3).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/adromischuscooperi(4).jpg" alt="Adromischus cooperi" title="Adromischus cooperi"/>
 	</section>   
                 <hr>
                 <div class="species-title-gallery-category" id="americanavariegata">Agave americana variegata
@@ -44,9 +45,9 @@
                 </div>
                 <hr>
         <section>                                                                   <!-- AGAVE AMERICANA VARIEGATA -->
-            <img class="flex" src="../assets/img/othersucculents/gallery/agaveamericanavariegata(1).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/agaveamericanavariegata(2).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/agaveamericanavariegata(3).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/agaveamericanavariegata(1).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/agaveamericanavariegata(2).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/agaveamericanavariegata(3).jpg" alt="Agave americana variegata" title="Agave americana variegata"/>
 	</section> 
                 <hr>
                 <div class="species-title-gallery-category" id="rufescensvariegata">Anacampseros rufescens variegata
@@ -54,46 +55,55 @@
                 </div>
                 <hr>
         <section>                                                                   <!-- ANACAMPSEROS RUFESCENS VARIEGATA -->
-            <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(1).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(2).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(3).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(4).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(1).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(2).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(3).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/anacampserosrufescensvariegata(4).jpg" alt=">Anacampseros rufescens variegata" title=">Anacampseros rufescens variegata"/>
 	</section>   
+                <hr>
+                <div class="species-title-gallery-category" id="lehmannii">Corpuscularia lehmannii
+                        <a href="othersucculentsindex.html#lehmannii">Voir la fiche info</a>
+                </div>
+                <hr>
+        <section>                                                                   <!-- CORPUSCULARIA LEHMANNII -->
+                <img class="flex" src="../assets/img/othersucculents/gallery/corpuscularialehmannii(1).jpg" alt="Corpuscularia lehmannii" title="Corpuscularia lehmannii"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/corpuscularialehmannii(2).jpg" alt="Corpuscularia lehmannii" title="Corpuscularia lehmannii"/>
+                </section>   
                 <hr>
                 <div class="species-title-gallery-category" id="pulchra">Frithia pulchra
                         <a href="othersucculentsindex.html#pulchra">Voir la fiche info</a>
                 </div>
                 <hr>
         <section>                                                                   <!-- FRITHIA PULCHRA -->
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(1).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(2).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(3).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(4).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(5).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(6).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(7).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(8).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(1).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(2).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(3).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(4).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(5).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(6).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(7).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/frithiapulchra(8).jpg" alt="Frithia pulchra" title="Frithia pulchra"/>
 	</section>
     <hr>
                 <div class="species-title-gallery-category" id="lithops">Lithops
                         <a href="othersucculentsindex.html#lithops">Voir la fiche info</a>
                 </div>
                 <hr>
-    <section>                                                                   <!-- LITHOPS -->
-            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(1).jpg" alt="lithops" title="lithops"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(2).jpg" alt="lithops" title="lithops"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(3).jpg" alt="lithops" title="lithops"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/lithops(4).jpg" alt="lithops" title="lithops"/>
-    </section>
+        <section>                                                                   <!-- LITHOPS -->
+                <img class="flex" src="../assets/img/othersucculents/gallery/lithops(1).jpg" alt="lithops" title="lithops"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/lithops(2).jpg" alt="lithops" title="lithops"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/lithops(3).jpg" alt="lithops" title="lithops"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/lithops(4).jpg" alt="lithops" title="lithops"/>
+        </section>
                 <hr>
                 <div class="species-title-gallery-category" id="titanopsis">Titanopsis
                         <a href="othersucculentsindex.html#Titanopsis">Voir la fiche info</a>
                 </div>
                 <hr>
         <section>                                                                   <!-- TITANOPSIS -->
-            <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(1).jpg" alt="Titanopsis" title="Titanopsis"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(2).jpg" alt="Titanopsis" title="Titanopsis"/>
-            <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(3).jpg" alt="Titanopsis" title="Titanopsis"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(1).jpg" alt="Titanopsis" title="Titanopsis"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(2).jpg" alt="Titanopsis" title="Titanopsis"/>
+                <img class="flex" src="../assets/img/othersucculents/gallery/titanopsis(3).jpg" alt="Titanopsis" title="Titanopsis"/>
 	</section>
 </main>
 <nav class="btn-index-category">                                                <!-- BOUTONS DE NAVIGATION ET TOP -->
