--- a/link/othersucculentsindex.html
+++ b/link/othersucculentsindex.html
@@ -21,6 +21,7 @@
                     <a href="#cooperi">Adromischus cooperi,</a>
                     <a href="#americanavariegata">Agave americana variegata,</a>
                     <a href="#rufescensvariegata">Anacampseros rufescens variegata,</a>
+                    <a href="#lehmannii">Corpuscularia lehmannii,</a>
                     <a href="#echinatum">Delosperma echinatum,</a>
                     <a href="#pulchra">Frithia pulchra,</a>
                     <a href="#lithops">lithops,</a>
@@ -100,7 +101,32 @@
             <div class="index-category-tab-content" id="rufescensvariegata6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de taille moyenne. <br/>Le dessus est garni d'Akadama un beau rendu.
             </div>
         </section>
-        <hr>   
+        <hr> 
+        <section class="index-category-system-tabs">                            <!-- CORPUSCULARIA LEHMANNII -->
+            <nav-tabs class="index-category-nav-tabs" id="lehmannii">
+                <a href="#lehmannii1" aria-selected="true">Nom</a>
+                <a href="#lehmannii2">Exposition en été</a>
+                <a href="#lehmannii3">Exposition en hiver</a>
+                <a href="#lehmannii4">Arrosage en été</a>
+                <a href="#lehmannii5">Arrosage en hiver</a>
+                <a href="#lehmannii6">Rempotage</a>
+            </nav-tabs>   
+            <div class="index-category-tab-content" id="lehmannii1"><span class="species">Corpuscularia lehmannii<a href="othersucculentsgallery.html#lehmannii">Voir la galerie photo</a></span>
+                    <img src="../assets/img/othersucculents/index/corpuscularialehmannii.jpg" alt="Corpuscularia lehmannii" title="Corpuscularia lehmannii"/>
+            </div>   
+            <div class="index-category-tab-content" id="lehmannii2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil.
+            </div>
+            <div class="index-category-tab-content" id="lehmannii3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
+            </div>
+            <div class="index-category-tab-content" id="lehmannii4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie.
+            </div>
+            <div class="index-category-tab-content" id="lehmannii5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
+            </div>
+            <div class="index-category-tab-content" id="lehmannii6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je les garde dans un pot en plastique carré pour faciliter leur installation les uns contre les autres. <br/>J'ai garni le haut de graviers de Jura car le rendu me plaît.
+                <a class="species-repotting-info" href="repottingcorpuscularialehmannii.html" alt="Rempotage Corpuscularia lehmannii" title="Rempotage Corpuscularia lehmannii">Voir comment je rempote les Corpuscularia lehmannii</a>
+            </div>
+        </section>
+        <hr>  
         <section class="index-category-system-tabs">                            <!-- DELOSPERMA ECHINATUM -->
             <nav-tabs class="index-category-nav-tabs" id="echinatum">
                 <a href="#echinatum1" aria-selected="true">Nom</a>
@@ -165,12 +191,12 @@
             </div>
             <div class="index-category-tab-content" id="lithops3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil. 
             </div>
-            <div class="index-category-tab-content" id="lithops4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie.
+            <div class="index-category-tab-content" id="lithops4" hidden="hidden">Je ne les arrose que lors de longues périodes de soleil sans pluie.
             </div>
             <div class="index-category-tab-content" id="lithops5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se fripper. 
             </div>
             <div class="index-category-tab-content" id="lithops6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je les garde dans un pot en plastique rond qui se trouve dans un grand bac carré en terre-cuite rempli de sable afin de garder les pieds des Lithops au frais. <br/>J'ai garni le haut de graviers de Jura car le rendu me plaît.
-                <a class="species-repotting-info" href="repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops">Voir comment je rempote mes Lithops</a>
+                <a class="species-repotting-info" href="repottinglithops.html" alt="Rempotage lithops" title="Rempotage lithops">Voir comment je rempote les Lithops</a>
             </div>
         </section>
         <hr>
