--- a/link/repottingferocactusstainesii.html
+++ b/link/repottingferocactusstainesii.html
@@ -12,11 +12,11 @@
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Ferocactus stainesii</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Ferocactus stainesii en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Ferocactus stainesii en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="othercactusindex.html#stainesii">Fiche info de mon Ferocactus stainesii</a></button>
-                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#stainesii">Galerie photos de mon Ferocactus stainesii</a></button>
+                    <button class="styled-btn-index"><a href="othercactusindex.html#stainesii">Fiche info de mes Ferocactus stainesii</a></button>
+                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#stainesii">Galerie photos de mes Ferocactus stainesii</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
@@ -57,7 +57,7 @@
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le mélange des 3 précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
+                Ici, le mélange des précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
             </p>
         </div>
     </section>
@@ -151,7 +151,7 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
+    <section class="species-repotting-step">                                    <!-- REMPOTAGE FINI -->
         <div class="species-repotting-img">
             <img class="responsive-resize" src="../assets/img/repotting/species/ferocactusstainesii(9).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
