--- a/link/repottingstetsoniacoryne.html
+++ b/link/repottingstetsoniacoryne.html
@@ -12,7 +12,7 @@
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Stetsonia coryne</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Stetsonia coryne en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter les Stetsonia coryne en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
         </section>  
                 <section class="nav-button">
                     <button class="styled-btn-index"><a href="othercactusindex.html#coryne">Fiche info de mes Stetsonia coryne</a></button>
@@ -57,7 +57,7 @@
             </div>
             <div class="species-repotting-expl">
                 <p>
-                    Ici, le mélange des 3 précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
+                    Ici, le mélange des précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
                 </p>
             </div>
         </section>
@@ -111,7 +111,7 @@
                 </p>
             </div>
         </section>
-        <section class="species-repotting-step">                                        <!-- REMPOTTAGE FINI -->
+        <section class="species-repotting-step">                                        <!-- REMPOTAGE FINI -->
             <div class="species-repotting-img">
                 <img class="responsive-resize" src="../assets/img/repotting/species/stetsoniacoryne(5).jpg" alt="rempotage fini" title="rempotage fini"/>
             </div>
